k8s/microk8s/microk8s_yaml_n_sh/07-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cgp-worker-1
  namespace: cgp-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cgp-worker-1
  template:
    metadata:
      labels:
        app: cgp-worker-1
    spec:
      containers:
      - name: worker
        image: cgp-nt-again:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 2727
        resources:
          limits:
            memory: "1Gi"
            cpu: "1000m"
          requests:
            memory: "512Mi"
            cpu: "500m"
        command: ["sh", "scripts/run_listener.sh"]
        volumeMounts:
        - name: condorgp-volume-scripts
          mountPath: /condorgp/scripts

        - name: condorgp-volume-data
          mountPath: /condorgp/data

        - name: condorgp-volume-raw-data
          mountPath: /condorgp/raw_data

        - name: condorgp-volume-condorgp
          mountPath: /condorgp/condorgp

      volumes:
      ### note ignore .venv by not adding it to volumeMounts
      - name: ignore-condorgp-volume-venv
        hostPath:
          path: /home/hsth/code/hughharford/condorgp/.venv

      - name: condorgp-volume-scripts
        hostPath:
          path: /home/hsth/code/hughharford/condorgp/scripts

      - name: condorgp-volume-data
        hostPath:
          path: /home/hsth/code/hughharford/condorgp/data

      - name: condorgp-volume-raw-data
        hostPath:
          path: /home/hsth/code/hughharford/condorgp/raw_data

      - name: condorgp-volume-condorgp
        hostPath:
          path: /home/hsth/code/hughharford/condorgp/condorgp

---
apiVersion: v1
kind: Service
metadata:
  name: cgp-worker-1
  namespace: cgp-system
spec:
  selector:
    app: cgp-worker-1
  ports:
  - port: 2727
    targetPort: 2727
