k8s/microk8s/microk8s_yaml_n_sh/09-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cgp-ingress
  namespace: cgp-system
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: cgp.local
    http:
      paths:
      - path: /grafana
        pathType: Prefix
        backend:
          service:
            name: cgp-grafana
            port:
              number: 3000
      - path: /rabbitmq
        pathType: Prefix
        backend:
          service:
            name: cgp-rabbitmq
            port:
              number: 15672
      - path: /worker
        pathType: Prefix
        backend:
          service:
            name: cgp-worker-1
            port:
              number: 2727
